# XELEMENT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
qtprojects/: README.txt
qtprojects/XElement/: XElement.pro  main.cpp
qtprojects/XElementTest/: XElementTest.pro  main.cpp
source/: json.h  xml.h
source/example/: XExamples.h
source/kernel/: CMakeLists.txt  XElement.cpp  XElement.h  json.cpp  xml.cpp  xml.h
tests/: MSExcel.xml  Test-1.xml  Test-1_copy.xml  Test.xml
